<resources>
    <!-- General -->
    <string name="app_name">CodeDay Companion</string>
    <string name="app_name_short">CodeDay</string>
    <string name="default_notif_channel">event_notifications</string>

    <!-- Notifications -->
    <string name="event_notifications_name">Event Notifications</string>
    <string name="event_notifications_desc">These types of notifications will be sent during CodeDay, such as announcements from organizers and activity reminders.</string>

    <!-- Authentication -->
    <string name="welcome">Welcome to Companion!</string>
    <string name="welcome_subtitle">Sign in with the email you registered for CodeDay with.</string>
    <string name="or">or</string>
    <string name="scan_ticket">Scan Ticket</string>
    <string name="look_up_email">…or look up your ticket via email</string>
    <string name="email_example">you@gmail.com</string>
    <string name="find_ticket">Log In</string>
    <string name="loading_registration">We\'re fetching your ticket info!</string>
    <string name="error_scan">Sorry, we couldn\'t find that ticket.</string>

    <!-- All Set -->
    <string name="all_set_title">You\'re all set!</string>
    <string name="all_set_subtitle">We\'ll notify you when it\'s time to check in. Meanwhile, why not share the CodeDay hype?!</string>
    <string name="share_codeday">Tell your friends about CodeDay</string>

    <!-- Check-in -->
    <string name="admit_one">ADMIT ONE</string>
    <string name="checkin_title">Want to skip the check-in line?</string>
    <string name="checkin_body">Tap here to check yourself in right now.</string>
    <string name="self_check_in">Self Check-In</string>
    <string name="your_ticket">%1s\'s Ticket</string>
    <string name="check_in_loading">Checking you in…</string>
    <string name="check_in_error">Couldn\'t check you in: %1s</string>
    <string name="show_screen">Show this screen at the door.\n(You can skip to the front of the line.)</string>
    <string name="wrong_codeday">You\'re at the wrong CodeDay! Contact 888-CODE-230 to transfer your ticket.</string>

    <!-- Feed -->
    <string name="welcome_name">Hey there, %1s!</string>
    <string name="countdown">There are <b>%1s</b> days until CodeDay!</string>

    <!-- Static Cards -->
    <string name="share_title">Share CodeDay</string>
    <string name="share_desc">"We might be a little biased, but we think CodeDay is pretty fun. We designed it to be fun, in fact. But it's even more fun with friends, so tell a friend about CodeDay and help us help you help us all."</string>

    <string name="coming_soon_title">Coming Soon…</string>
    <string name="coming_soon_desc">Please note that this is the alpha version of Companion! Lots of things are still being added. That said, let us know in Slack if you find any bugs :)</string>
    <string name="go_to_slack">Go to Slack</string>

    <string name="day_of_title">It\'s CodeDay!</string>
    <string name="day_of_desc">It\'s here, it\'s here! CodeDay has finally arrived, and this app is finally made useful! We hope you\'re super excited :)</string>

    <string name="before_day_of_title">Nothing interesting here yet…</string>
    <string name="before_day_of_desc">At the moment, there\'s nothing much to see here. But during CodeDay, you\'ll see stuff like announcements from the organizers and reminders for upcoming activities. For now, though, we have a countdown to CodeDay so you can get hyped!</string>

    <string name="skip_the_lines_title">Want to skip the check-in line?</string>
    <string name="skip_the_lines_desc">With CodeDay Companion, you can totally skip the check-in line with self check-in. You\'ll automatically get notified to check yourself in when you arrive.</string>

    <string name="parent_info_title">Reminder: More Info Needed</string>
    <string name="parent_info_desc">Please fill out your age and parent info now so you don\'t need to at the door. Thanks!</string>
    <string name="parent_info_link">Fill Out Info</string>

    <string name="waiver_title">Reminder: One more step…</string>
    <string name="waiver_desc">You (or your parent) will need to fill out the waiver before you can attend. Please do that now so you don\'t need to at the event, thanks!</string>
    <string name="waiver_link">Fill Out Waiver</string>

    <string name="post_event_title">CodeDay\'s over already?!</string>
    <string name="post_event_desc">We know, we can\'t believe it either… 24 hours goes by surprisingly fast. You can be the first to know when we open registrations for next season\'s CodeDay by tapping the button below!</string>

    <string name="sign_out_title">Need to sign out?</string>
    <string name="sign_out_desc">If you\'ve already registered for next season and need to sign out of the app, tap the button at the top to do so.</string>

    <!-- Dynamic Cards -->
    <string name="uber_title">Need a ride?</string>
    <string name="uber_desc">Grab a ride to CodeDay with Uber. Tap the button below to open the Uber app and request a ride to the venue.</string>
    <string name="spotify_title">Now Playing</string>
    <string name="spotify_action">View on Spotify</string>
    <string name="codeday_staff">CodeDay Staff</string>

    <!-- Upsell -->
    <string name="tickets_on_sale">Tickets for next CodeDay are on sale!</string>
    <string name="hosted_at">%1s\nHosted at %2s</string>
    <string name="codeday_ticket">CodeDay Ticket</string>
    <string name="attendee_info">Attendee: %1s\nEmail: %2s</string>
    <string name="edit_info">Edit registration info</string>
    <string name="give_money">Give us your money</string>
    <string name="loading_event">Loading event info…</string>
    <string name="error">Oh no!</string>
    <string name="register_for_codeday">Register for CodeDay</string>
    <string name="card_info_bad">Your card info doesn\'t look right. Please ensure it\'s entered correctly.</string>

    <!-- Loading -->
    <string name="loading_title">Just a sec…</string>

    <!-- Lipsum -->
    <string name="lorem_ipsum">fluff furries dragon Anthrocon dragon husky Biggest Little Fur Con Midwest FurFest handpaws jackal bork *hugs* yap fursuit everyfur footpaws dragon bark fursuit Midwest FurFest bark o.o Biggest Little Fur Con meow paws fursuit paws *hugs* fursona paws tails everyfur fox Biggest Little Fur Con bork footpaws fursuit handpaws paw bork purr fandom goat *hugs* fursuiter convention *hugs* furry trash trash panda footpaws convention fursuiter Anthrocon 🐺 furry Midwest FurFest Midwest</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_checkin">Check-in</string>

    <!-- Live Chat -->
    <string name="live_chat_name">CodeDay Support</string>

    <!-- Permission Rationales -->
    <string name="permission_location_title">Location Permission Needed</string>
    <string name="permission_location_desc">
        CodeDay Companion needs access to your location so we can determine if you are at CodeDay. This is used for self check-in; your location will not be accessed until then.\n\nTo grant this permission, allow it on the next screen.
    </string>

    <!-- Log Out -->
    <string name="sign_out_dialog_title">Are you sure you want to log out?</string>

    <!-- Misc -->
    <string name="preferences_key">org.srnd.companion.prefs</string>
    <string name="live_chat">Live Chat</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="ok">OK</string>
</resources>
