<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2018 srnd.org
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:stripe="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".BuyTicketsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/tickets_on_sale"/>

        <LinearLayout
            android:id="@+id/registration_form"
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/google_map"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <TextView
                android:id="@+id/event_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:lineSpacingExtra="4dp"
                android:text="@string/hosted_at"
                android:layout_margin="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator"/>

            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/ticket_info"
                    android:layout_marginBottom="16dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ticket_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginRight="6dp"
                        android:textColor="@android:color/black"
                        android:text="@string/codeday_ticket"/>

                    <TextView
                        android:id="@+id/ticket_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/ticket_title"
                        android:textSize="20sp"
                        android:text="&#x2A2F; 1"/>

                    <TextView
                        android:id="@+id/attendee_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ticket_title"
                        android:text="@string/attendee_info"/>

                    <!--<TextView-->
                        <!--android:id="@+id/edit_info_button"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_below="@id/attendee_info"-->
                        <!--android:textColor="@color/colorPrimary"-->
                        <!--android:text="@string/edit_info"/>-->

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/old_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="$20.00"/>

                        <TextView
                            android:id="@+id/new_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            android:text="$10.00"/>
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0dp"
                    android:layout_height="0dp"/>

                <com.stripe.android.view.CardInputWidget
                    android:id="@+id/card_widget"
                    stripe:cardTint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/buy_ticket"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="@string/give_money"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>